Solve CSS issue : Lock Icon in Portlet Title Covers Up the Minimize Icon When Portlet is Locked

--- a/uportal-war/src/main/webapp/media/skins/universality/coal/portal.css
+++ b/uportal-war/src/main/webapp/media/skins/universality/coal/portal.css
@@ -1490,6 +1490,8 @@
 .up .up-portlet-wrapper.locked .up-portlet-titlebar h2 a {
   color: #8f8f8f;
   text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.7);
+  padding-left: 21px;
+  background: transparent url(/ResourceServingWebapp/rs/tango/0.8.90/16x16/emblems/emblem-readonly.png) 0 0 no-repeat;
 }
 .up .up-portlet-wrapper.locked .up-portlet-titlebar h2 a:hover, .up .up-portlet-wrapper.locked .up-portlet-titlebar h2 a:focus {
   color: #a9a9a9;
@@ -1500,10 +1502,6 @@
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
-}
-.up .up-portlet-wrapper.locked .up-portlet-titlebar h2 {
-  padding-left: 21px;
-  background: transparent url(/ResourceServingWebapp/rs/tango/0.8.90/16x16/emblems/emblem-readonly.png) 0 0 no-repeat;
 }
 .up .dashboard .up-portlet-controls {
   top: 0;
